# sansio

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  README.md  chat_server_tcp.rs  chat_server_udp.rs
examples/examples/: chat_client_tcp.rs  chat_client_udp.rs  chat_server_tcp.rs  chat_server_tcp_bootstrap.rs  chat_server_tcp_raw.rs  chat_server_udp_bootstrap.rs  chat_server_udp_raw.rs
examples/src/: lib.rs
sansio/: Cargo.toml  README.md
sansio-bootstrap/: Cargo.toml
sansio-bootstrap/src/: lib.rs
sansio-bootstrap/src/bootstrap_tcp/: bootstrap_tcp_client.rs  bootstrap_tcp_server.rs  mod.rs
sansio-bootstrap/src/bootstrap_udp/: bootstrap_udp_client.rs  bootstrap_udp_server.rs  mod.rs
sansio-codec/: Cargo.toml
sansio-codec/src/: lib.rs
sansio-codec/src/transport/: mod.rs
sansio-executor/: Cargo.toml  README.md
sansio-executor/src/: lib.rs  tokio.rs
sansio-rt/: Cargo.toml
sansio-transport/: Cargo.toml
sansio/src/: lib.rs  pipeline.rs  pipeline_builder.rs  pipeline_internal.rs
src/: lib.rs  local_executor.rs  pipeline.rs  typed.rs
src/local_executor/: mod.rs  smol.rs  tokio.rs
