[package]
name = "sansio"
version = "0.0.5"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "sansio — an IO-free Rust networking framework that makes it easy to build protocols, application clients/servers."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio"
homepage = "https://sansio.org"
repository = "https://github.com/sansio-org/sansio"
keywords = ["sansio", "networking", "protocols"]
categories = [ "network-programming" ]

[dependencies]
log = "0.4.28"
scoped-tls = "1.0.1"
core_affinity = "0.8.3"

# Runtime: smol (default)
smol = { version = "2.0.2", optional = true }
futures-lite = { version = "2.6.1", optional = true }

# Runtime: tokio (optional)
tokio = { version = "1", optional = true, features = ["rt", "sync", "macros"] }

[features]
# Default: Use smol's LocalExecutor (lightweight, minimal dependencies)
default = ["runtime-smol"]

# Use smol's LocalExecutor for local task execution
runtime-smol = ["smol", "futures-lite"]

# Use tokio's LocalSet for local task execution
# Note: Cannot be used together with runtime-smol
runtime-tokio = ["tokio"]

[dev-dependencies]
bytes = "1.5.0"
chrono = "0.4.35"
env_logger = "0.11.3"
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.80"
ctrlc = "3.4.2"
crossbeam-channel = "0.5"
wg = "0.7"

#[[example]]
#name = "chat_server_tcp"
#path = "examples/chat_server_tcp.rs"

[[example]]
name = "chat_server_udp"
path = "examples/chat_server_udp.rs"

#[[example]]
#name = "client_tcp"
#path = "examples/client_tcp.rs"

#[[example]]
#name = "client_udp"
#path = "examples/client_udp.rs"

#[[example]]
#name = "echo_server_tcp"
#path = "examples/echo_server_tcp.rs"

#[[example]]
#name = "echo_server_udp"
#path = "examples/echo_server_udp.rs"
