[package]
name = "examples"
version = "0.0.0"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "Examples for the sansio ecosystem"
license = "MIT/Apache-2.0"
repository = "https://github.com/sansio-org/sansio"
publish = false

[dependencies]
# Sansio crates
sansio = { path = "../sansio", version = "0.0.7" }
sansio-rt = { path = "../sansio-rt", version = "0.0.7", default-features = false }

# Other dependencies
bytes = "1.11.0"
chrono = "0.4.42"
env_logger = "0.11.8"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
ctrlc = "3.5.1"
crossbeam-channel = "0.5.15"
wg = "0.9.2"
log = "0.4.28"

[features]
default = ["runtime-smol"]
runtime-smol = ["sansio-rt/runtime-smol"]
runtime-tokio = ["sansio-rt/runtime-tokio"]

[[example]]
name = "chat_server_udp"
path = "examples/chat_server_udp.rs"
